fixed values algorithm. investigating screen top issue on ios devices

--- a/src/styles/sass/header2.scss
+++ b/src/styles/sass/header2.scss
@@ -10,7 +10,7 @@
       z-index:20;
       overflow:hidden;
       top:0;
-      padding-top:11px;
+      // padding-top:11px;
       box-sizing: border-box;
       border: 1px solid red;
       
